Modify index.html, add vim

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <title>Our website</title>
 <body background="blue">
-<script type="text/javascript">
-    var ip = location.host;
-    document.write(ip);
-</script>
+<!--<script type="text/javascript">-->
+<!--    var ip = location.host;-->
+<!--    document.write(ip);-->
+<!--</script>-->
+<H1>Hostname is: HSTNME</H1>
 </body>
 </html>
